--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     
     </head>
     <body>
-    <script src="app.js"></script>
+        <!--<script src="underscore.js"></script>-->
+        <script src="app.js"></script>
     </body>
     
 </html>
