Starting of GreetrLib from JSCourse

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <ul class="people">
                 <li>John Doe</li>
                 <li>Jane Doe</li>
-                <li>Jim Doe</li>
+                <li>Jim Doe/li>
             </ul>
         </div>
        <!-- <script src="underscore.js"></script>-->
